--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,12 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "smartedu/wsgi.py",
-      "use": "@vercel/python",
-      "config": {
-        "maxLambdaSize": "25mb",
-        "runtime": "python3.13.1"
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "smartedu/wsgi.py"
-    } 
-  ]
-}
+    "version": 2,
+    "builds": [
+      { "src": "manage.py", "use": "@vercel/python" }
+    ],
+    "routes": [
+      { "src": "/static/(.*)", "dest": "/staticfiles/$1" },
+      { "src": "/media/(.*)", "dest": "/media/$1" },
+      { "src": "/(.*)", "dest": "manage.py" }
+    ]
+  }
+  
