--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,20 @@
 {
     "version": 2,
     "builds": [
-      { "src": "manage.py", "use": "@vercel/python" }
+      { 
+        "src": "smartedu/wsgi.py", 
+        "use": "@vercel/python",
+        "config": { 
+          "maxLambdaSize": "15mb", 
+          "runtime": "python3.9" 
+        }
+      }
     ],
     "routes": [
-      { "src": "/static/(.*)", "dest": "/staticfiles/$1" },
-      { "src": "/media/(.*)", "dest": "/media/$1" },
-      { "src": "/(.*)", "dest": "manage.py" }
+      { 
+        "src": "/(.*)", 
+        "dest": "smartedu/wsgi.py" 
+      }
     ]
   }
   
