--- a/vercel.json
+++ b/vercel.json
@@ -11,10 +11,9 @@
       }
     ],
     "routes": [
-      { 
-        "src": "/(.*)", 
-        "dest": "smartedu/wsgi.py" 
-      }
+      { "src": "/static/(.*)", "dest": "/staticfiles/$1" },
+      { "src": "/media/(.*)", "dest": "/media/$1" },
+      { "src": "/(.*)", "dest": "smartedu/wsgi.py" }
     ]
   }
   
