--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,14 @@
           "maxLambdaSize": "15mb", 
           "runtime": "python3.13.1" 
         }
+      },
+      {
+        "src": "build.sh",
+        "use": "@vercel/python",
+        "config": {
+          "maxLambdaSize": "15mb",
+          "runtime": "python3.13.1"
+        }
       }
     ],
     "routes": [
